--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Liferay Alerts</string>
+	<string name="app_name">Liferay Alerts</string>
+	<string name="email">Email</string>
+	<string name="password">Password</string>
+	<string name="server">Server</string>
+	<string name="sign_in">Sign In</string>
 </resources>
