Allowing guests to register their devices, removing username and password field since they are not needed with anonymous registration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
 	<string name="app_name">Liferay Alerts</string>
-	<string name="email">Email</string>
-	<string name="password">Password</string>
+	<string name="register">Register</string>
 	<string name="server">Server</string>
-	<string name="sign_in">Sign In</string>
 </resources>
