--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 	<string name="app_name">Liferay Alerts</string>
-	<string name="register">Register</string>
-	<string name="server">Server</string>
+	<string name="failed_to_get_token_from_google">Failed to get token from Google</string>
+	<string name="failed_to_register">Failed to register!</string>
+	<string name="registered">Registered!</string>
 </resources>
