--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 	<string name="app_name">Liferay Alerts</string>
 	<string name="failed_to_register">Failed to register!</string>
+	<string name="release_date">Aug 19</string>
 	<string name="registered">Registered!</string>
-	<string name="welcome">Welcome to Liferay Alerts!</string>
+	<string name="welcome">E aí, galerinha!\nBem-vindos ao Liferay Alerts :)\n\nA partir de agora, vocês receberão notificações sobre o mundo Liferay.\n\nEssa é uma versão alpha, com a participação fechada para alguns convidados. Por isso, aguardamos ansiosamente o feedback de vocês.\n\nValeu pela participação ;D</string>
 </resources>
