top bar user name and "last alert from" message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">Liferay Alerts</string>
+	<string name="last_alert_from">LAST ALERT FROM</string>
 	<string name="registration_failure">Something went wrong, you won\'t be able to receive notifications.</string>
 	<string name="registration_success">You will receive notifications from now on!</string>
 	<string name="release_date">Aug 19</string>
