--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
 	<string name="vote">Vote</string>
 	<string name="vote_failure">Something went wrong with your vote.</string>
 	<string name="vote_success">Voted!</string>
-	<string name="welcome">E aí, galerinha!\nBem-vindos ao Liferay Alerts :)\n\nA partir de agora, vocês receberão notificações sobre o mundo Liferay.\n\nEssa é uma versão alpha, com a participação fechada para alguns convidados. Por isso, aguardamos ansiosamente o feedback de vocês.\n\nValeu pela participação ;D</string>
+	<string name="welcome">Hello everyone!\n\nThank you for installing Liferay Alerts :)\n\nI will be sending some useful messages during the conference, stay tuned.</string>
 </resources>
